add file compress

--- a/style.css
+++ b/style.css
@@ -128,8 +128,8 @@ div.desc {
 .text {
  padding: 10px;
  color: #fff;
- font-size: 20px;
- line-height: 1.5em;
+ font-size: 17px;
+ line-height: 20px;
  text-align: center;
  position: absolute;
  top: 50%;
